refactor jaxrs validation